--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Rubik:wght@400;500;700&display=swap"
     rel="stylesheet">
 
-  <!-- Styles -->
+  <!-- Style -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
